# Kir.ROBLOX_bot

./: .env.example  .gitignore  README.md  alembic.ini  bot.py  gamecore.db-shm  gamecore.db-wal  index.js  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
app/: __init__.py  main.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  container.py  exceptions.py  logging.py  module.py
app/database/: __init__.py  base.py  engine.py
app/handlers/: errors.py  start.py
app/keyboards/: __init__.py  main_menu.py  reply_menu.py
app/middleware/: __init__.py  access.py  database.py  logging.py  services.py
app/models/: __init__.py  friend_listing.py  user.py
app/modules/: registry.py
app/modules/ai/: __init__.py  fallback.py  handlers.py  knowledge.py  module.py  openrouter.py  (+3 more)
app/repositories/: __init__.py  base.py  friend_listing.py  user.py
app/routers/: __init__.py  root.py
app/schemas/: __init__.py  ai.py  news.py  roblox.py
app/services/: __init__.py
app/utils/: __init__.py
deploy/server/: README.md  gamecore.service  setup.sh
deploy/windows/: run_bot.cmd  run_bot_hidden.vbs
migrations/: env.py
migrations/versions/: 15b84e87b6d0_add_friend_listings.py  698c0076ddbf_add_user_nickname.py  cd2b18661e4f_add_user_roblox_user_id.py  d96285898706_create_users_table.py
test/: index.test.js
tests/: conftest.py  test_ai.py  test_ai_knowledge.py  test_bot.py  test_container.py  test_fnf.py  test_friends.py  test_news.py  test_profile.py  test_roblox.py  test_safety.py  test_user_repository.py
(+17 files in other folders)
