[project]
name = "gamecore-ai"
version = "0.1.0"
description = "GameCore AI — персональный интеллектуальный игровой ассистент"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.15",
    "aiohttp>=3.10",
    "aiosqlite>=0.20",
    "alembic>=1.14",
    "loguru>=0.7",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0.36",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
